--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -197,7 +197,12 @@
     "Vindicator": true,
     "DissidentEntity": true,
     "InvisiimmortalEntity": true,
-    "TheimmortalEntity": true
+    "TheimmortalEntity": true,
+    "SiameseSkeletonsrightEntity": true,
+    "SiameseSkeletonsleftEntity": true,
+    "EntityRockyRoller": true,
+    "InvisicloggerEntity": true,
+    "SwarmEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -300,7 +305,12 @@
     "Vindicator": false,
     "DissidentEntity": false,
     "InvisiimmortalEntity": false,
-    "TheimmortalEntity": false
+    "TheimmortalEntity": false,
+    "SiameseSkeletonsrightEntity": false,
+    "SiameseSkeletonsleftEntity": false,
+    "EntityRockyRoller": false,
+    "InvisicloggerEntity": false,
+    "SwarmEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
@@ -365,7 +375,17 @@
     "BathotrapNaturalSpawnEntity": 30.0,
     "INVISIBLEBIDYEntity": 100.0,
     "SkeletonThrasherEntity": 50.0,
-    "ThehunterEntity": 16.0
+    "ThehunterEntity": 16.0,
+    "BathotrapSpawnEntity": 30.0,
+    "SiameseSkeletonsleftEntity": 10.0,
+    "TheordureEntity": 25.0,
+    "ThesmokerEntity": 25.0,
+    "TherodEntity": 35.0,
+    "XiphactinusEntity": 25.0,
+    "InvisicloggerEntity": 100.0,
+    "DireHoundLeaderEntity": 100.0,
+    "MegastarSpawnEntity": 50.0,
+    "BabyColossoteusEntity": 60.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
