--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -217,7 +217,9 @@
     "NightmareStalkerEntity": true,
     "AxestromEntity": true,
     "SearedSpiritEntity": true,
-    "EntityCyclops": true
+    "EntityCyclops": true,
+    "TheGraveWatcherEntity": true,
+    "GluttonFishEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -340,7 +342,9 @@
     "NightmareStalkerEntity": false,
     "AxestromEntity": false,
     "SearedSpiritEntity": false,
-    "EntityCyclops": false
+    "EntityCyclops": false,
+    "TheGraveWatcherEntity": false,
+    "GluttonFishEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
@@ -427,7 +431,13 @@
     "Vindicator": 24.0,
     "MaggotEntity": 6.0,
     "EntityCentipedeHead": 35.0,
-    "AxestromEntity": 1.0
+    "AxestromEntity": 1.0,
+    "ZombieFishermanEntity": 25.0,
+    "SuckerEntity": 15.0,
+    "FallenChaosKnightEntity": 40.0,
+    "InvisiimmortalEntity": 100.0,
+    "VertebratEntity": 12.0,
+    "Husk": 100.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
