--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,10 +1,10 @@
 #Minecraft server properties
-#Tue Jul 29 04:26:11 UTC 2025
+#Tue Jul 29 04:59:33 UTC 2025
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=easy
+difficulty=normal
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -26,7 +26,7 @@ level-name=world
 level-seed=
 level-type=minecraft\:normal
 max-chained-neighbor-updates=1000000
-max-players=20
+max-players=3
 max-tick-time=60000
 max-world-size=29999984
 motd=§r              §5§l(MSX)  §dHosting Gratuito§r\n          §f§nhttps\://discord.gg/w9xt8ydNZe
@@ -35,7 +35,7 @@ online-mode=false
 op-permission-level=4
 player-idle-timeout=0
 prevent-proxy-connections=false
-pvp=true
+pvp=false
 query.port=25565
 rate-limit=0
 rcon.password=
