--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -437,7 +437,8 @@
     "FallenChaosKnightEntity": 40.0,
     "InvisiimmortalEntity": 100.0,
     "VertebratEntity": 12.0,
-    "Husk": 100.0
+    "Husk": 100.0,
+    "ThegliterEntity": 30.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
