--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -219,7 +219,11 @@
     "SearedSpiritEntity": true,
     "EntityCyclops": true,
     "TheGraveWatcherEntity": true,
-    "GluttonFishEntity": true
+    "GluttonFishEntity": true,
+    "WitherSkeleton": true,
+    "InvisilehceryEntity": true,
+    "LecheryEntity": true,
+    "WeakspotEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -344,7 +348,11 @@
     "SearedSpiritEntity": false,
     "EntityCyclops": false,
     "TheGraveWatcherEntity": false,
-    "GluttonFishEntity": false
+    "GluttonFishEntity": false,
+    "WitherSkeleton": false,
+    "InvisilehceryEntity": false,
+    "LecheryEntity": false,
+    "WeakspotEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
@@ -438,7 +446,10 @@
     "InvisiimmortalEntity": 100.0,
     "VertebratEntity": 12.0,
     "Husk": 100.0,
-    "ThegliterEntity": 30.0
+    "ThegliterEntity": 30.0,
+    "WitherSkeleton": 20.0,
+    "CaveSpider": 12.0,
+    "Stray": 20.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
