--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -449,7 +449,9 @@
     "ThegliterEntity": 30.0,
     "WitherSkeleton": 20.0,
     "CaveSpider": 12.0,
-    "Stray": 20.0
+    "Stray": 20.0,
+    "MegastarNaturalSpawnEntity": 50.0,
+    "WeakspotEntity": 3.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
