--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -223,7 +223,8 @@
     "WitherSkeleton": true,
     "InvisilehceryEntity": true,
     "LecheryEntity": true,
-    "WeakspotEntity": true
+    "WeakspotEntity": true,
+    "ThebidyupsideEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -352,7 +353,8 @@
     "WitherSkeleton": false,
     "InvisilehceryEntity": false,
     "LecheryEntity": false,
-    "WeakspotEntity": false
+    "WeakspotEntity": false,
+    "ThebidyupsideEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
