--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -224,7 +224,8 @@
     "InvisilehceryEntity": true,
     "LecheryEntity": true,
     "WeakspotEntity": true,
-    "ThebidyupsideEntity": true
+    "ThebidyupsideEntity": true,
+    "TherabidusEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -354,7 +355,8 @@
     "InvisilehceryEntity": false,
     "LecheryEntity": false,
     "WeakspotEntity": false,
-    "ThebidyupsideEntity": false
+    "ThebidyupsideEntity": false,
+    "TherabidusEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
@@ -453,7 +455,8 @@
     "CaveSpider": 12.0,
     "Stray": 20.0,
     "MegastarNaturalSpawnEntity": 50.0,
-    "WeakspotEntity": 3.0
+    "WeakspotEntity": 3.0,
+    "TherabidusEntity": 5.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
