--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -225,7 +225,8 @@
     "LecheryEntity": true,
     "WeakspotEntity": true,
     "ThebidyupsideEntity": true,
-    "TherabidusEntity": true
+    "TherabidusEntity": true,
+    "CrackleballEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -356,7 +357,8 @@
     "LecheryEntity": false,
     "WeakspotEntity": false,
     "ThebidyupsideEntity": false,
-    "TherabidusEntity": false
+    "TherabidusEntity": false,
+    "CrackleballEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
@@ -456,7 +458,8 @@
     "Stray": 20.0,
     "MegastarNaturalSpawnEntity": 50.0,
     "WeakspotEntity": 3.0,
-    "TherabidusEntity": 5.0
+    "TherabidusEntity": 5.0,
+    "CrackleballEntity": 1.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
