--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -226,7 +226,9 @@
     "WeakspotEntity": true,
     "ThebidyupsideEntity": true,
     "TherabidusEntity": true,
-    "CrackleballEntity": true
+    "CrackleballEntity": true,
+    "MissionerEntity": true,
+    "LifestealerEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -358,7 +360,9 @@
     "WeakspotEntity": false,
     "ThebidyupsideEntity": false,
     "TherabidusEntity": false,
-    "CrackleballEntity": false
+    "CrackleballEntity": false,
+    "MissionerEntity": false,
+    "LifestealerEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
