--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -463,7 +463,9 @@
     "MegastarNaturalSpawnEntity": 50.0,
     "WeakspotEntity": 3.0,
     "TherabidusEntity": 5.0,
-    "CrackleballEntity": 1.0
+    "CrackleballEntity": 1.0,
+    "NightmareStalkerEntity": 70.0,
+    "ThehorrorsEntity": 45.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
