--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -228,7 +228,19 @@
     "TherabidusEntity": true,
     "CrackleballEntity": true,
     "MissionerEntity": true,
-    "LifestealerEntity": true
+    "LifestealerEntity": true,
+    "Endermite": true,
+    "BoundSoul": true,
+    "KrampusEntity": true,
+    "PalehandEntity": true,
+    "Propball1Entity": true,
+    "CloggerEntity": true,
+    "SearedSpiritNotDespawnEntity": true,
+    "BoneImpMinionEntity": true,
+    "Silverfish": true,
+    "KrampusHenchmanEntity": true,
+    "MegalodonEntity": true,
+    "MagmaCube": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -362,7 +374,19 @@
     "TherabidusEntity": false,
     "CrackleballEntity": false,
     "MissionerEntity": false,
-    "LifestealerEntity": false
+    "LifestealerEntity": false,
+    "Endermite": false,
+    "BoundSoul": false,
+    "KrampusEntity": false,
+    "PalehandEntity": false,
+    "Propball1Entity": false,
+    "CloggerEntity": false,
+    "SearedSpiritNotDespawnEntity": false,
+    "BoneImpMinionEntity": false,
+    "Silverfish": false,
+    "KrampusHenchmanEntity": false,
+    "MegalodonEntity": false,
+    "MagmaCube": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
@@ -465,7 +489,16 @@
     "TherabidusEntity": 5.0,
     "CrackleballEntity": 1.0,
     "NightmareStalkerEntity": 70.0,
-    "ThehorrorsEntity": 45.0
+    "ThehorrorsEntity": 45.0,
+    "MissionerEntity": 150.0,
+    "BoundSoul": 22.0,
+    "SearedSpiritEntity": 50.0,
+    "SwarmEntity": 6.0,
+    "PalehandEntity": 10.0,
+    "SupremeBonescallerEntity": 65.0,
+    "Silverfish": 8.0,
+    "SiameseSkeletonsrightEntity": 10.0,
+    "NeutralCreeper": 20.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
