--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -242,7 +242,9 @@
     "MegalodonEntity": true,
     "MagmaCube": true,
     "PanderodusEntity": true,
-    "ElectrophorusEntity": true
+    "ElectrophorusEntity": true,
+    "SeaBirdSpawnEntity": true,
+    "MakaMakaSwimEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -390,7 +392,9 @@
     "MegalodonEntity": false,
     "MagmaCube": false,
     "PanderodusEntity": false,
-    "ElectrophorusEntity": false
+    "ElectrophorusEntity": false,
+    "SeaBirdSpawnEntity": false,
+    "MakaMakaSwimEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
@@ -505,7 +509,8 @@
     "NeutralCreeper": 20.0,
     "MakaMakaSpawnEntity": 40.0,
     "PanderodusEntity": 15.0,
-    "MakaMakaInGroundEntity": 20.0
+    "MakaMakaInGroundEntity": 20.0,
+    "EntityGhost": 30.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
