--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -510,7 +510,9 @@
     "MakaMakaSpawnEntity": 40.0,
     "PanderodusEntity": 15.0,
     "MakaMakaInGroundEntity": 20.0,
-    "EntityGhost": 30.0
+    "EntityGhost": 30.0,
+    "LifestealerEntity": 100.0,
+    "ThebeartamerEntity": 50.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
