--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -512,7 +512,8 @@
     "MakaMakaInGroundEntity": 20.0,
     "EntityGhost": 30.0,
     "LifestealerEntity": 100.0,
-    "ThebeartamerEntity": 50.0
+    "ThebeartamerEntity": 50.0,
+    "DissidentEntity": 40.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
