--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -513,7 +513,8 @@
     "EntityGhost": 30.0,
     "LifestealerEntity": 100.0,
     "ThebeartamerEntity": 50.0,
-    "DissidentEntity": 40.0
+    "DissidentEntity": 40.0,
+    "BabySkeletonMinionEntity": 10.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
