--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -244,7 +244,8 @@
     "PanderodusEntity": true,
     "ElectrophorusEntity": true,
     "SeaBirdSpawnEntity": true,
-    "MakaMakaSwimEntity": true
+    "MakaMakaSwimEntity": true,
+    "ScarletPersecutorEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -394,7 +395,8 @@
     "PanderodusEntity": false,
     "ElectrophorusEntity": false,
     "SeaBirdSpawnEntity": false,
-    "MakaMakaSwimEntity": false
+    "MakaMakaSwimEntity": false,
+    "ScarletPersecutorEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
