--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -245,7 +245,10 @@
     "ElectrophorusEntity": true,
     "SeaBirdSpawnEntity": true,
     "MakaMakaSwimEntity": true,
-    "ScarletPersecutorEntity": true
+    "ScarletPersecutorEntity": true,
+    "HesperornisSpawnEntity": true,
+    "DiamondThermiteEntity": true,
+    "MantaEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -396,7 +399,10 @@
     "ElectrophorusEntity": false,
     "SeaBirdSpawnEntity": false,
     "MakaMakaSwimEntity": false,
-    "ScarletPersecutorEntity": false
+    "ScarletPersecutorEntity": false,
+    "HesperornisSpawnEntity": false,
+    "DiamondThermiteEntity": false,
+    "MantaEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
@@ -516,7 +522,8 @@
     "LifestealerEntity": 100.0,
     "ThebeartamerEntity": 50.0,
     "DissidentEntity": 40.0,
-    "BabySkeletonMinionEntity": 10.0
+    "BabySkeletonMinionEntity": 10.0,
+    "DiamondThermiteEntity": 14.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
