--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -523,7 +523,8 @@
     "ThebeartamerEntity": 50.0,
     "DissidentEntity": 40.0,
     "BabySkeletonMinionEntity": 10.0,
-    "DiamondThermiteEntity": 14.0
+    "DiamondThermiteEntity": 14.0,
+    "MakaMakaNaturalSpawnEntity": 40.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
