--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -524,7 +524,8 @@
     "DissidentEntity": 40.0,
     "BabySkeletonMinionEntity": 10.0,
     "DiamondThermiteEntity": 14.0,
-    "MakaMakaNaturalSpawnEntity": 40.0
+    "MakaMakaNaturalSpawnEntity": 40.0,
+    "Slime": 16.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
