--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -248,7 +248,8 @@
     "ScarletPersecutorEntity": true,
     "HesperornisSpawnEntity": true,
     "DiamondThermiteEntity": true,
-    "MantaEntity": true
+    "MantaEntity": true,
+    "PhantomCreeperCopyEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -402,7 +403,8 @@
     "ScarletPersecutorEntity": false,
     "HesperornisSpawnEntity": false,
     "DiamondThermiteEntity": false,
-    "MantaEntity": false
+    "MantaEntity": false,
+    "PhantomCreeperCopyEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
@@ -525,7 +527,8 @@
     "BabySkeletonMinionEntity": 10.0,
     "DiamondThermiteEntity": 14.0,
     "MakaMakaNaturalSpawnEntity": 40.0,
-    "Slime": 16.0
+    "Slime": 16.0,
+    "PhantomCreeperCopyEntity": 20.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
