--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -249,7 +249,9 @@
     "HesperornisSpawnEntity": true,
     "DiamondThermiteEntity": true,
     "MantaEntity": true,
-    "PhantomCreeperCopyEntity": true
+    "PhantomCreeperCopyEntity": true,
+    "GhoulEntity": true,
+    "SkullMimicEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -404,7 +406,9 @@
     "HesperornisSpawnEntity": false,
     "DiamondThermiteEntity": false,
     "MantaEntity": false,
-    "PhantomCreeperCopyEntity": false
+    "PhantomCreeperCopyEntity": false,
+    "GhoulEntity": false,
+    "SkullMimicEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
