--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -251,7 +251,8 @@
     "MantaEntity": true,
     "PhantomCreeperCopyEntity": true,
     "GhoulEntity": true,
-    "SkullMimicEntity": true
+    "SkullMimicEntity": true,
+    "CryomancerEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -408,7 +409,8 @@
     "MantaEntity": false,
     "PhantomCreeperCopyEntity": false,
     "GhoulEntity": false,
-    "SkullMimicEntity": false
+    "SkullMimicEntity": false,
+    "CryomancerEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
@@ -532,7 +534,8 @@
     "DiamondThermiteEntity": 14.0,
     "MakaMakaNaturalSpawnEntity": 40.0,
     "Slime": 16.0,
-    "PhantomCreeperCopyEntity": 20.0
+    "PhantomCreeperCopyEntity": 20.0,
+    "BloodyGadflyEntity": 20.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
