--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -252,7 +252,17 @@
     "PhantomCreeperCopyEntity": true,
     "GhoulEntity": true,
     "SkullMimicEntity": true,
-    "CryomancerEntity": true
+    "CryomancerEntity": true,
+    "HoveringHurricaneEntity": true,
+    "Illusioner": true,
+    "StratlingEntity": true,
+    "Cloud_GolemEntity": true,
+    "Lionfish_Entity": true,
+    "Deepling_Angler_Entity": true,
+    "YetiCrabSpawnEntity": true,
+    "YetiCrabNaturalSpawnEntity": true,
+    "AmmonitaEntity": true,
+    "Deepling_Entity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -410,7 +420,17 @@
     "PhantomCreeperCopyEntity": false,
     "GhoulEntity": false,
     "SkullMimicEntity": false,
-    "CryomancerEntity": false
+    "CryomancerEntity": false,
+    "HoveringHurricaneEntity": false,
+    "Illusioner": false,
+    "StratlingEntity": false,
+    "Cloud_GolemEntity": false,
+    "Lionfish_Entity": false,
+    "Deepling_Angler_Entity": false,
+    "YetiCrabSpawnEntity": false,
+    "YetiCrabNaturalSpawnEntity": false,
+    "AmmonitaEntity": false,
+    "Deepling_Entity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
@@ -535,7 +555,10 @@
     "MakaMakaNaturalSpawnEntity": 40.0,
     "Slime": 16.0,
     "PhantomCreeperCopyEntity": 20.0,
-    "BloodyGadflyEntity": 20.0
+    "BloodyGadflyEntity": 20.0,
+    "YetiCrabSpawnEntity": 30.0,
+    "YetiCrabNaturalSpawnEntity": 30.0,
+    "Propball1Entity": 4.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
