--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -262,7 +262,8 @@
     "YetiCrabSpawnEntity": true,
     "YetiCrabNaturalSpawnEntity": true,
     "AmmonitaEntity": true,
-    "Deepling_Entity": true
+    "Deepling_Entity": true,
+    "LiopleurodonEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -430,7 +431,8 @@
     "YetiCrabSpawnEntity": false,
     "YetiCrabNaturalSpawnEntity": false,
     "AmmonitaEntity": false,
-    "Deepling_Entity": false
+    "Deepling_Entity": false,
+    "LiopleurodonEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
