--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -263,7 +263,9 @@
     "YetiCrabNaturalSpawnEntity": true,
     "AmmonitaEntity": true,
     "Deepling_Entity": true,
-    "LiopleurodonEntity": true
+    "LiopleurodonEntity": true,
+    "AnomalocarisEntity": true,
+    "DunkleosteusEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -432,7 +434,9 @@
     "YetiCrabNaturalSpawnEntity": false,
     "AmmonitaEntity": false,
     "Deepling_Entity": false,
-    "LiopleurodonEntity": false
+    "LiopleurodonEntity": false,
+    "AnomalocarisEntity": false,
+    "DunkleosteusEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
