--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,10 +1,10 @@
 #Minecraft server properties
-#Fri Aug 01 03:50:30 UTC 2025
+#Fri Aug 01 05:12:52 UTC 2025
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=normal
+difficulty=easy
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
