--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -265,7 +265,10 @@
     "Deepling_Entity": true,
     "LiopleurodonEntity": true,
     "AnomalocarisEntity": true,
-    "DunkleosteusEntity": true
+    "DunkleosteusEntity": true,
+    "TusoteuthisEntity": true,
+    "Deepling_Brute_Entity": true,
+    "AnglerfishEntity": true
   },
   "entitiesalwaysinfernal": {
     "XiphactinusEntity": false,
@@ -436,7 +439,10 @@
     "Deepling_Entity": false,
     "LiopleurodonEntity": false,
     "AnomalocarisEntity": false,
-    "DunkleosteusEntity": false
+    "DunkleosteusEntity": false,
+    "TusoteuthisEntity": false,
+    "Deepling_Brute_Entity": false,
+    "AnglerfishEntity": false
   },
   "entitybasehealth": {
     "CrabNaturalSpawnEntity": 30.0,
@@ -564,7 +570,9 @@
     "BloodyGadflyEntity": 20.0,
     "YetiCrabSpawnEntity": 30.0,
     "YetiCrabNaturalSpawnEntity": 30.0,
-    "Propball1Entity": 4.0
+    "Propball1Entity": 4.0,
+    "Lionfish_Entity": 12.0,
+    "KrampusHenchmanEntity": 30.0
   },
   "enableChampionCompat": true,
   "infernalMobsReplacesChampions": true,
